# wikilate

./: .gitignore  README.markdown  Wikilate.hs  stack.yaml  wikilate.cabal
src/: Main.hs
