Name:               wikilate
Version:            0.1
Description:        Command-line translator which uses Wikipedia as dictionary
License:            MIT
Author:             Karol Kuczmarski "Xion" <karol.kuczmarski@gmail.com>
Maintainer:         Karol Kuczmarski "Xion" <karol.kuczmarski@gmail.com>
Stability:          experimental
Build-Type:         Simple
Cabal-Version:      >=1.6

Executable wikilate
    Main-is:        src/Main.hs
    Build-Depends:  base
                    , aeson
                    , bytestring
                    , http-client
                    , http-client-tls
                    , http-types
                    , split
                    , text
                    , unordered-containers
                    , vector
